--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "set HTTPS=true && react-scripts start",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
