--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "date-fns": "^2.25.0",
-    "firebase": "^9.1.2",
+    "firebase": "^9.6.10",
+    "firebase-tools": "^10.6.0",
     "lodash": "^4.17.21",
     "mkcert": "^1.4.0",
     "react": "^17.0.2",
@@ -20,8 +21,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-
+    "start": "set HTTPS=true && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
